Build Debian package for amd64 and arm64

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,6 @@ clap = { version = "4.5.17", features = ["derive"] }
 copyright = "2024, Christian Luijten <christian@luijten.org>"
 extended-description-file = "debian/extended-description"
 maintainer = "Christian Luijten <christian@luijten.org>"
-maintainer-scripts = "debian/"
+section = "net"
 systemd-units = { enable = true }
 
