--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,16 @@
-image: debian:bookworm
+image: rust:bookworm
 
 build deb:
   stage: build
+  parallel:
+    matrix:
+      - ARCH: [arm64, amd64]
+  tags:
+    - saas-linux-small-${ARCH}
   script:
-    - apt update && apt install build-essential curl git
-    - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
-    - . $HOME/.cargo/env
     - cargo install cargo-deb
     - cargo deb -v
+  artifacts:
+    name: debian package
+    paths:
+      - target/debian
